--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Spotify preview widget</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/index.js"></script>
+    <script src="js/jquery-2.1.1.js"></script>
   </head>
   <body>
     <h1>Spotify preview widget</h1>
