--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="widget">
       <div class="header">
-        <div class="btn-play disabled"></div>
+        <div class="btn-play disabled" id="playbutton" onclick=""></div>
 
         <div class="metadata">
           <p class="title">Song title</p>
@@ -27,7 +27,7 @@
         <img src="https://i.scdn.co/image/4df66c8b705efa6dd3be4e884fe2ca8779fd4fc9"/>
       </div>
 
-      <audio id="audio"></audio>
+      <audio id="audio" src=""></audio>
     </div>
 
 
