Added play song

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="widget">
       <div class="header">
-        <div class="btn-play disabled" id="playbutton" onclick=""></div>
+        <div class="btn-play disabled" id="playbutton"></div>
 
         <div class="metadata">
           <p class="title">Song title</p>
