some refactoring with getSong()

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="js/jquery-2.1.1.js"></script>
   </head>
   <body>
-    <h1>Spotify preview widget</h1>
+    <h1>Hack Spotify</h1>
 
     <div class="widget">
       <div class="header">
@@ -32,7 +32,7 @@
 
 
     <form>
-      <input type="text" name="track" value="spotify:track:7Bxv0WL7UC6WwQpk9TzdMJ" />
+      <input type="text" name="track" placeholder="Insert a track id and press Enter" value="" />
       <button type="submit">Load track</button>
     </form>
 
